<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.clevertec.task3.MainActivity"
        android:id="@+id/first_fragment">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:orientation="vertical"
            android:id="@+id/linearLayout">
        <com.google.android.material.appbar.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                tools:ignore="MissingConstraints">
            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:background="?attr/colorPrimary"
                    android:layout_height="match_parent">
                <Button
                        android:layout_gravity="left"
                        style="?android:attr/borderlessButtonStyle"
                        android:id="@+id/button_exit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exit"
                        android:drawableLeft="@drawable/baseline_arrow_back_ios_white_18dp"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <Button
                android:layout_margin="@dimen/layoutMargin"
                android:text="@string/select_contact"
                android:textSize="@dimen/textSizeMainList"
                android:textColor="@color/gray"
                android:gravity="center_vertical"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:id="@+id/select_contact"
                tools:ignore="MissingConstraints"/>
        <Button
                android:layout_margin="@dimen/layoutMargin"
                android:text="@string/show_contact"
                android:textSize="@dimen/textSizeMainList"
                android:textColor="@color/gray"
                android:gravity="center_vertical"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_face_black_24dp"
                android:id="@+id/show_contacts"
                tools:ignore="MissingConstraints"/>
        <Button
                android:layout_margin="@dimen/layoutMargin"
                android:text="@string/show_from_sp"
                android:textSize="@dimen/textSizeMainList"
                android:textColor="@color/gray"
                android:gravity="center_vertical"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_settings_black_24dp"
                android:id="@+id/show_from_SP"
                tools:ignore="MissingConstraints"/>
        <Button
                android:layout_margin="@dimen/layoutMargin"
                android:text="@string/show_in_notification"
                android:textSize="@dimen/textSizeMainList"
                android:textColor="@color/gray"
                android:gravity="center_vertical"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_error_outline_black_24dp"
                android:id="@+id/show_in_notification"
                tools:ignore="MissingConstraints"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info_contact"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            android:gravity="bottom"
            android:paddingLeft="@dimen/textSizeMainList"
            android:paddingBottom="@dimen/textSizeMainList"
            app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_contact"
                android:text="@string/info"
                style="@style/NameContact"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_contact"
                android:text="@string/info"
                style="@style/InfoContact"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_contact"
                android:text="@string/info"
                style="@style/InfoContact"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>